css/comment-collapser.css
.thing .midcol {
    position: static !important;
}

.expander {
    font-style: normal !important;
    margin-right: 3px;
    padding: 1px;
}

body .comment .child {
    margin-top: 10px;
    margin-left: 15px;
}

.comment {
    position: relative;
}

.comment.noncollapsed.deleted .midcol {
    visibility: initial;
}

.comment.noncollapsed.deleted .arrow {
    visibility: hidden;
}

.collapser {
    z-index: 5;
    position: absolute;
    background-repeat: repeat-y;
    background-position: center;
    opacity: .4;
}

.collapser:hover {
    opacity: 1;
    cursor: pointer;
}

